added iliad service

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 streamlit
 pandas
-openai
-google-generativeai
+langchain
+langchain-openai
+langchain-google-genai
+langchain-anthropic
+python-dotenv
