feat: Add GitHub client for PR review and a Gemini API key validation notebook.

--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,5 @@ ILIAD_CLIENT_SECRET=your_client_secret_here
 ILIAD_TOKEN_URL=https://iliad.example.com/oauth/token
 ILIAD_ENDPOINT=https://iliad.example.com
 AZURE_DEPLOYMENT_NAME=gpt-4
+GITHUB_USERNAME=kartik-cogs
+GITHUB_PAT=your_github_pat_here
